--- a/data/countries/Makefile.am
+++ b/data/countries/Makefile.am
@@ -1,3 +1,5 @@
 installdir = $(pkgdatadir)/countries
 
-dist_install_DATA = *.png
+dist_install_DATA = ca.png \
+                    es.png \
+                    en.png \
