--- a/data/countries/Makefile.am
+++ b/data/countries/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(pkgdatadir)/countries
 
 dist_install_DATA = ca.png \
                     es.png \
-                    en.png \
+                    en.png 
