--- a/data/countries/Makefile.am
+++ b/data/countries/Makefile.am
@@ -2,4 +2,4 @@ installdir = $(pkgdatadir)/countries
 
 dist_install_DATA = ca_AD.png \
                     es_ES.png \
-                    en_GB.png 
+                    en_EN.png 
