--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -11,6 +11,7 @@ dist_pkgdata_DATA = \
 	rcpositions.xml \
 	setup.xml \
 	skin_default.xml \
+	skin_display_vuduo2.xml \
 	skin_subtitles.xml \
 	skin.xml \
 	freesat.t1 \
